--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🍽️ The Recipe Box</title>
+  <title>The Recipe Box</title>
+
+   <link rel="icon" href="data:image/svg+xml,
+        <svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>
+            <text y=%22.9em%22 font-size=%2290%22>🍽</text>
+        </svg>">
+  
   <link rel="stylesheet" href="style.css" />
   <link
   rel="stylesheet"
