--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Recipe Box</title>
-
-   <link rel="icon" href="data:image/svg+xml,
-        <svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>
-            <text y=%22.9em%22 font-size=%2290%22>🍽️</text>
-        </svg>">
   
+  <link rel="icon" type="image/png" sizes="512x512" href="trb.png" />
   <link rel="stylesheet" href="style.css" />
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
+    
     <!-- Navigation Bar -->
     <nav class="navbar">
-      <div class="logo">🍽️The Recipe Box</div>
+      <div class="logo">
+        <img src="logo.png" alt="The Recipe Box Logo" class="nav-logo" />
+        <span>The Recipe Box</span>
+      </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -33,54 +28,64 @@
 
     <!-- Hero Section -->
     <header class="hero">
-      <h1>Discover Delicious Recipes</h1>
-      <p>Search and explore your favorite meals from around the world!</p>
-   <div class="search-container">
-  <input type="text" id="searchInput" placeholder="Search recipes...">
-  <i class="fas fa-times clear-icon" id="clearIcon"></i>
-  <i class="fas fa-search search-icon" id="searchIcon"></i>
-</div>
-
-
-
+      <div class="hero-content">
+        <img src="logo.png" alt="logo" class="hero-logo" />
+        <div class="hero-text">
+          <h1>Discover Delicious Recipes</h1>
+          <p>Search and explore your favorite meals from around the world!</p>
+          <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Search recipes..." />
+            <i class="fas fa-search search-icon" id="searchIcon"></i>
+          </div>
+        </div>
+      </div>
     </header>
 
+    
+
     <!-- Recipe Grid -->
-  <main id="recipeGrid"></main>
-
-<div class="show-more-container">
-  <button id="showMoreBtn" style="display: none;">Show More</button>
+     <!-- View Toggle -->
+<div class="view-toggle">
+  <button id="gridViewBtn" class="active">Grid View</button>
+  <button id="listViewBtn">List View</button>
 </div>
 
+    <main id="recipeGrid"></main>
 
+    <div class="show-more-container">
+      <button id="showMoreBtn" style="display: none;">Show More</button>
+    </div>
 
-   <!-- Modal for Full Recipe -->
-<div id="recipeModal" class="modal">
-  <div class="modal-content">
-    <span class="close-button">&times;</span>
-    <h2 id="modalTitle"></h2>
-    <img id="modalImage" alt="Recipe Image">
-    <h3>Ingredients</h3>
-    <ul id="modalIngredients"></ul>
-    <h3>Instructions</h3>
-    <ol id="modalInstructions"></ol>
-
-    <!-- ✅ New Button Added -->
-    <button id="downloadBtn">📥 Download Recipe</button>
-  </div>
-</div>
-
+    <!-- Modal for Full Recipe -->
+    <div id="recipeModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <img id="modalImage" alt="Recipe Image" />
+        <h3>Ingredients</h3>
+        <ul id="modalIngredients"></ul>
+        <h3>Instructions</h3>
+        <ol id="modalInstructions"></ol>
+        <button id="downloadBtn">📥 Download Recipe</button>
+      </div>
+    </div>
 
     <!-- About Section -->
     <section id="about" class="info-section">
       <h2>About The Recipe Box</h2>
-      <p>The Recipe Box is your go-to website for discovering and sharing amazing recipes. From traditional dishes to modern delights, our goal is to help you cook better, eat well, and explore culinary creativity.</p>
+      <p style="font-style: italic;">
+            Welcome to The Recipe Box – your ultimate culinary companion! Whether you're a home cook, a food enthusiast, or someone seeking inspiration in the kitchen, we bring you a world of flavors at your fingertips. From timeless traditional dishes to modern gastronomic delights, our curated recipes are designed to spark creativity, make cooking effortless, and turn every meal into a memorable experience. Explore, cook, and savor the joy of food with us!
+
+      </p>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="info-section">
       <h2>Contact Us</h2>
-      <p>Have a suggestion or want to share a recipe? Reach out at <a href="mailto:hello@therecipebox.com">hello@therecipebox.com</a></p>
+      <p>
+        Have a suggestion or want to share a recipe? Reach out at 
+        <a href="mailto:hello@therecipebox.com">hello@therecipebox.com</a>
+      </p>
     </section>
 
     <!-- Footer -->
@@ -89,9 +94,9 @@
     </footer>
   </div>
 
+  <!-- Scripts -->
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
