--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    
+
     <!-- Navigation Bar -->
     <nav class="navbar">
       <div class="logo">
@@ -41,15 +41,13 @@
       </div>
     </header>
 
-    
+    <!-- View Toggle -->
+    <div class="view-toggle">
+      <button id="gridViewBtn" class="active"><i class="fas fa-th"></i> Grid View</button>
+      <button id="listViewBtn"><i class="fas fa-list"></i> List View</button>
+    </div>
 
     <!-- Recipe Grid -->
-     <!-- View Toggle -->
-<div class="view-toggle">
-  <button id="gridViewBtn" class="active">Grid View</button>
-  <button id="listViewBtn">List View</button>
-</div>
-
     <main id="recipeGrid"></main>
 
     <div class="show-more-container">
@@ -74,8 +72,7 @@
     <section id="about" class="info-section">
       <h2>About The Recipe Box</h2>
       <p style="font-style: italic;">
-            Welcome to The Recipe Box – your ultimate culinary companion! Whether you're a home cook, a food enthusiast, or someone seeking inspiration in the kitchen, we bring you a world of flavors at your fingertips. From timeless traditional dishes to modern gastronomic delights, our curated recipes are designed to spark creativity, make cooking effortless, and turn every meal into a memorable experience. Explore, cook, and savor the joy of food with us!
-
+        Welcome to The Recipe Box – your ultimate culinary companion! Whether you're a home cook, a food enthusiast, or someone seeking inspiration in the kitchen, we bring you a world of flavors at your fingertips. From timeless traditional dishes to modern gastronomic delights, our curated recipes are designed to spark creativity, make cooking effortless, and turn every meal into a memorable experience. Explore, cook, and savor the joy of food with us!
       </p>
     </section>
 
@@ -91,7 +88,13 @@
     <!-- Footer -->
     <footer>
       <p>&copy; 2025 The Recipe Box. All Rights Reserved.</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
     </footer>
+
   </div>
 
   <!-- Scripts -->
